[package]
name = "altp"
version = "0.2.1"
authors = ["Ross Donohoe <rossdon.95@googlemail.com>"]
edition = "2021"
description = "A simple theme-picker for alacritty A cross-platform, GPU-accelerated terminal emulator."
license = "MIT"

[build]
build = "build.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
dialoguer = "0.11.0"
toml = "0.8.12"
whoami = "1.5.1"

[build-dependencies]
whoami = "1.5.1"

[[bin]]
name = "altp"
path = "src/main.rs"
